// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoundWave components basic render 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 334,
      "width": 334,
    }
  }
>
  <PanGestureHandler
    minDist={5}
    onGestureEvent={[Function]}
    onHandlerStateChange={[Function]}
    simultaneousHandlers={
      Object {
        "current": null,
      }
    }
  >
    <AnimatedComponent
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 334,
            "width": 334,
          }
        }
      />
    </AnimatedComponent>
  </PanGestureHandler>
</View>
`;

exports[`SoundWave components renderContent render 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 336,
      "width": 336,
    }
  }
>
  <PanGestureHandler
    minDist={5}
    onGestureEvent={[Function]}
    onHandlerStateChange={[Function]}
    simultaneousHandlers={
      Object {
        "current": null,
      }
    }
  >
    <AnimatedComponent
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <div
        style={
          Object {
            "borderColor": "gray",
            "borderRadius": 84,
            "borderWidth": 1,
            "height": 168,
            "width": 168,
          }
        }
      />
    </AnimatedComponent>
  </PanGestureHandler>
</View>
`;
